# swagger/v1/swagger.yaml
@@ -103,6 +103,105 @@ paths:
                   - id
                   - title
                   - preview_image
+  "/api/v1/students/courses/{course_id}/lessons":
+    get:
+      summary: List of study lessons
+      tags:
+      - Study Lessons List
+      parameters:
+      - name: course_id
+        in: path
+        description: Course ID
+        required: true
+        schema:
+          type: string
+      - name: Authorization
+        in: header
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    title:
+                      type: string
+                  required:
+                  - id
+                  - title
+  "/api/v1/students/courses/{course_id}/lessons/{id}":
+    get:
+      summary: Lesson details
+      tags:
+      - Lesson Details
+      parameters:
+      - name: course_id
+        in: path
+        description: Course ID
+        required: true
+        schema:
+          type: string
+      - name: id
+        in: path
+        description: Lesson ID
+        required: true
+        schema:
+          type: string
+      - name: Authorization
+        in: header
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  title:
+                    type: string
+                  content:
+                    type: string
+                    nullable: true
+                required:
+                - id
+                - title
+                - content
+  "/api/v1/students/courses/{course_id}/lessons/{id}/done":
+    post:
+      summary: Mark lesson as done
+      tags:
+      - Mark Lesson as Done
+      parameters:
+      - name: course_id
+        in: path
+        description: Course ID
+        required: true
+        schema:
+          type: string
+      - name: id
+        in: path
+        description: Lesson ID
+        required: true
+        schema:
+          type: string
+      - name: Authorization
+        in: header
+        schema:
+          type: string
+      responses:
+        '200':
+          description: Ok
   "/api/v1/users/sign_in":
     post:
       summary: Sign in a user
